@@ -1,12 +1,13 @@
 package io.github.seenings.coin.api.impl;
 
-import com.songchi.seen.account.http.HttpCoinAccountService;
-import com.songchi.seen.account.service.CoinAccountService;
-import com.songchi.seen.account.service.FreezeService;
-import com.songchi.seen.coin.enumeration.AccountType;
-import com.songchi.seen.coin.enumeration.TradeType;
-import com.songchi.seen.trade.http.HttpCoinTradeService;
-import com.songchi.seen.trade.service.TradeService;
+import io.github.seenings.account.http.HttpCoinAccountService;
+import io.github.seenings.account.service.CoinAccountService;
+import io.github.seenings.account.service.CoinAccountUserService;
+import io.github.seenings.account.service.FreezeService;
+import io.github.seenings.coin.enumeration.AccountType;
+import io.github.seenings.coin.enumeration.TradeType;
+import io.github.seenings.trade.http.HttpCoinTradeService;
+import io.github.seenings.trade.service.TradeService;
 import jakarta.annotation.Resource;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
@@ -15,9 +16,10 @@ import org.springframework.web.bind.annotation.RestController;
 
 import java.util.Collections;
 import java.util.List;
+import java.util.Optional;
 import java.util.Set;
 
-import static com.songchi.seen.sys.constant.SeenConstant.FEIGN_VERSION;
+import static io.github.seenings.sys.constant.SeenConstant.FEIGN_VERSION;
 
 /**
  * CoinTradeController
@@ -34,11 +36,7 @@ public class CoinTradeController implements HttpCoinTradeService {
 
     @Override
     @PostMapping("freeze-to-sys-use")
-    public Integer freezeToSysUse(
-            @RequestParam("userId") Long userId,
-            @RequestParam("coinMount") int coinMount,
-            @RequestParam("tradeType") TradeType tradeType,
-            @RequestParam("description") String description) {
+    public Integer freezeToSysUse(@RequestParam("userId") Long userId, @RequestParam("coinMount") int coinMount, @RequestParam("tradeType") TradeType tradeType, @RequestParam("description") String description) {
 
         return freezeService.freezeToSysUse(userId, coinMount, tradeType, description);
 
@@ -46,11 +44,7 @@ public class CoinTradeController implements HttpCoinTradeService {
 
     @Override
     @PostMapping("freeze-to-temporary")
-    public Integer freezeToTemporary(
-            @RequestParam("userId") Long userId,
-            @RequestParam("coinMount") int coinMount,
-            @RequestParam("tradeType") TradeType tradeType,
-            @RequestParam("description") String description) {
+    public Integer freezeToTemporary(@RequestParam("userId") Long userId, @RequestParam("coinMount") int coinMount, @RequestParam("tradeType") TradeType tradeType, @RequestParam("description") String description) {
         return freezeService.freezeToTemporary(userId, coinMount, tradeType, description);
     }
 
@@ -63,11 +57,7 @@ public class CoinTradeController implements HttpCoinTradeService {
      */
     @Override
     @PostMapping("check-enough-and-freeze")
-    public Set<Integer> checkEnoughAndFreeze(
-            @RequestParam("userId") Long userId,
-            @RequestParam("coinMount") int coinMount,
-            @RequestParam("tradeType") TradeType tradeType,
-            @RequestParam("description") String description) {
+    public Set<Integer> checkEnoughAndFreeze(@RequestParam("userId") Long userId, @RequestParam("coinMount") int coinMount, @RequestParam("tradeType") TradeType tradeType, @RequestParam("description") String description) {
 
         return freezeService.checkEnoughAndFreeze(userId, coinMount, tradeType, description);
     }
@@ -87,25 +77,20 @@ public class CoinTradeController implements HttpCoinTradeService {
     }
 
     @Resource
-    private HttpCoinAccountService httpCoinAccountService;
-    @Resource
     private CoinAccountService coinAccountService;
 
     @Resource
     private TradeService tradeService;
+    @Resource
+    private CoinAccountUserService coinAccountUserService;
 
     @Override
     @PostMapping("simple-trade-type-to")
-    public Integer simpleTradeTypeTo(@RequestParam("userId") Long userId, @RequestParam("coinAmount") Integer coinAmount
-            , @RequestParam("tradeType") TradeType tradeType
-    ) {
-        Long temporaryAccountId = httpCoinAccountService
-                .userIdToAccountId(Set.of(userId), AccountType.USER_TEMPORARY).get(userId);
-        int sysRewardAccountTypeId =
-                AccountType.SYS_REWARD.getIndex();
-        List<Long> accountIds = coinAccountService.accountTypeToAccountId(Collections.singleton(sysRewardAccountTypeId))
-                .get(sysRewardAccountTypeId);
-        Long sysRewardAccountId = accountIds.stream().findFirst().orElse(null);
+    public Integer simpleTradeTypeTo(@RequestParam("userId") Long userId, @RequestParam("coinAmount") Integer coinAmount, @RequestParam("tradeType") TradeType tradeType) {
+        Long temporaryAccountId = coinAccountUserService.userIdToAccountId(Set.of(userId)).get(userId).stream().findFirst().orElse(null);
+        int sysRewardAccountTypeId = AccountType.SYS_REWARD.getIndex();
+        List<Long> accountIds = coinAccountService.accountTypeToAccountId(Collections.singleton(sysRewardAccountTypeId)).get(sysRewardAccountTypeId);
+        Long sysRewardAccountId = Optional.ofNullable(accountIds).orElse(Collections.emptyList()).stream().findFirst().orElse(null);
 
         return tradeService.sysOutTrade(temporaryAccountId, sysRewardAccountId, coinAmount, tradeType, tradeType.getLabel());
     }
